<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_title_item2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@drawable/steam_icon_main"
            android:layout_marginEnd="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steam_homePage"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/steam_white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_title_item3"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextClock
            android:id="@+id/tc_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_title_item4"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@drawable/steam_ic_lemp_off"
            android:layout_marginEnd="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steam_light"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/steam_white"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_title_item5"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center|right"
        android:paddingEnd="12dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_title_item5"
            android:layout_width="@dimen/dp_22"
            android:layout_height="@dimen/dp_22"
            android:src="@drawable/steam_icon_order"
            android:layout_marginEnd="3dp"/>
        <TextView
            android:id="@+id/tv_title_item5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steam_makeAnAppointment"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/steam_white">

        </TextView>
    </LinearLayout>


</LinearLayout>