<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/steam_ic_bg_xingkong"
    tools:context=".ui.activity.RecipeActivity">

    <include
        android:id="@+id/ll_title"
        layout="@layout/steam_view_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_height="@dimen/dp_10"
        android:layout_width="@dimen/dp_10"/>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/cook_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp_140"
        android:layout_marginBottom="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_174"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:keepScreenOn="true" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68"
        android:layout_height="@dimen/dp_10"
        android:layout_width="@dimen/dp_10"/>

    <EditText
        android:id="@+id/multi_work_finish_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_48"
        android:visibility="visible"
        android:layout_marginLeft="@dimen/dp_120"
        android:layout_marginTop="@dimen/dp_180"
        android:maxLength="10"
        android:maxWidth="@dimen/dp_400"
        android:singleLine="true"
        android:textColor="@color/steam_white"
        app:layout_constraintLeft_toRightOf="@id/cook_chart"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/common_white"
        android:hint="@string/steam_input_name"/>

    <View
        android:id="@+id/multi_work_finish_opt"
        android:background="@drawable/steam_ic_editor"
        app:layout_constraintLeft_toRightOf="@id/multi_work_finish_prompt"
        app:layout_constraintTop_toTopOf="@id/multi_work_finish_prompt"
        app:layout_constraintBottom_toBottomOf="@id/multi_work_finish_prompt"
        android:layout_marginLeft="@dimen/dp_24"
        android:visibility="visible"
        android:layout_height="@dimen/dp_48"
        android:layout_width="@dimen/dp_48"/>



    <TextView
        android:id="@+id/finish_go_home"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        app:layout_constraintLeft_toRightOf="@id/cook_chart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_100"
        android:background="@drawable/steam_shape_button_unselected"
        android:gravity="center"
        android:layout_marginLeft="@dimen/dp_120"
        android:text="@string/steam_back_home"
        android:textAlignment="center"
        android:textColor="@color/steam_white"
        android:visibility="visible"
        android:textSize="@dimen/sp_30" />

    <TextView
        android:id="@+id/finish_save_curve"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        app:layout_constraintLeft_toRightOf="@id/finish_go_home"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_100"
        android:background="@drawable/steam_shape_button_selected"
        android:gravity="center"
        android:visibility="visible"
        android:layout_marginLeft="@dimen/dp_64"
        android:text="@string/steam_carve_saving"
        android:textAlignment="center"
        android:textColor="@color/steam_white"
        android:textSize="@dimen/sp_30" />


</androidx.constraintlayout.widget.ConstraintLayout>