<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AppointmentActivity"
    android:background="@drawable/steam_ic_bg">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/common_ic_bg"/>

    <include
        android:id="@+id/ll_title"
        layout="@layout/steam_view_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/steam_shape_border_bg"
        android:layout_marginHorizontal="@dimen/dp_40"
        app:layout_constraintTop_toTopOf="@id/rv_time_hour"
        app:layout_constraintBottom_toBottomOf="@id/rv_time_hour"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_time_hour"
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        tools:itemCount="3"
        tools:listitem="@layout/steam_picker_item"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        app:layout_constraintBottom_toTopOf="@id/ll_foot"
        app:layout_constraintRight_toLeftOf="@id/tv_colon"/>
    <TextView
        android:id="@+id/tv_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_40"
        android:textColor="@color/steam_white"
        android:text=":"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        app:layout_constraintBottom_toTopOf="@id/ll_foot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_time_minute"
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content"
        tools:itemCount="3"
        tools:listitem="@layout/steam_picker_item"
        app:layout_constraintTop_toTopOf="@id/rv_time_hour"
        app:layout_constraintBottom_toBottomOf="@id/rv_time_hour"
        app:layout_constraintLeft_toRightOf="@id/tv_colon"/>
    <View
        android:id="@+id/ll_foot"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_104"
        android:background="#881E2229"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </View>
    <TextView
        android:id="@+id/tv_appointment_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_34"
        android:textColor="@color/steam_white"
        android:layout_marginLeft="@dimen/dp_70"
        android:text="@string/steam_appointment_time"
        app:layout_constraintTop_toTopOf="@id/ll_foot"
        app:layout_constraintBottom_toBottomOf="@id/ll_foot"
        app:layout_constraintLeft_toLeftOf="@id/ll_foot"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/steam_white"
        android:layout_marginLeft="@dimen/dp_70"
        android:textSize="@dimen/sp_34"
        android:text="1"
        app:layout_constraintTop_toTopOf="@id/ll_foot"
        app:layout_constraintBottom_toBottomOf="@id/ll_foot"
        app:layout_constraintLeft_toRightOf="@id/tv_appointment_time"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        android:textSize="@dimen/sp_30"
        android:textColor="@color/steam_white"
        android:gravity="center"
        android:layout_marginRight="@dimen/dp_27"
        android:background="@drawable/steam_shape_button_bg_cancel"
        android:text="@string/steam_cancel_oreder"
        app:layout_constraintRight_toLeftOf="@+id/btn_ok"
        app:layout_constraintTop_toTopOf="@id/ll_foot"
        app:layout_constraintBottom_toBottomOf="@id/ll_foot"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/dp_175"
        android:layout_height="@dimen/dp_56"
        android:layout_marginEnd="@dimen/dp_50"
        android:textSize="@dimen/sp_30"
        android:textColor="@color/steam_white"
        android:gravity="center"
        android:background="@drawable/steam_shape_button_bg_ok"
        android:text="@string/steam_ok_appointment"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ll_foot"
        app:layout_constraintBottom_toBottomOf="@id/ll_foot"/>
</androidx.constraintlayout.widget.ConstraintLayout>